Fix images overflowing

--- a/src/main.css
+++ b/src/main.css
@@ -69,6 +69,10 @@
   margin: 0 auto;
 }
 
+.post img {
+  width: 100%;
+}
+
 .post figure {
   display: flex;
   flex-direction: column;
